# crypto-real-time-inference

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  set_environment_variables.sh.example  setup.sh
.github/ISSUE_TEMPLATE/: user-story.md
.github/workflows/: build-and-push-to-docker-hub.yaml  ci.yaml  cicd.yaml  push-docker-image-to-docker-hub.yaml  push-docker-image-to-docker-hub.yml
deploy/: deploy.sh  deploy_container.sh  deploy_webhook.sh  download_models_from_wandb.py  environment.sh  environment.sh.example  environment_template.sh  go.mod  prediction-docker-compose.yml  setup_cloudflared.sh  setup_deploy_deb.sh  setup_deploy_ub.sh  webhook.go
frontend/: .env.local.example  package-lock.json  package.json  tailwind.config.js
frontend/app/: not-found.tsx  page.tsx
frontend/app/about/: page.tsx
frontend/app/contact/: page.tsx
frontend/app/css/additional-styles/: theme.css  toggle-switch.css  utility-patterns.css
frontend/app/mock/: route.ts
frontend/app/policy/: page.tsx
frontend/components/: PredictionForm.tsx  career.tsx  carousel.tsx  cta-contact.tsx  cta.tsx  features-animation.tsx  features-blocks.tsx  features-gallery.tsx  hero-about.tsx  hero-home.tsx  hero-testimonials.tsx  modal-video.tsx  newsletter.tsx  page-illustration.tsx  pricing-tables.tsx  process.tsx  related-links.tsx  related-posts-01.tsx  related-posts-02.tsx  tabs.tsx  testimonials-blocks.tsx  testimonials-carousel.tsx  testimonials-circles.tsx  timeline.tsx
frontend/components/About/: Education.tsx  Experience.tsx  ProgressBar.tsx  WidgetCertifications.tsx  WidgetSkills.tsx
frontend/components/Prediction/: PredictionContainer.tsx  PredictionForm.tsx  PredictionResult.tsx
frontend/components/ResearchPaper/: PaperHeader.tsx  PaperImage.tsx  PaperParagraph.tsx  ResearchPaper.tsx
frontend/components/mdx/: mdx.tsx
frontend/components/ui/: FadeAnimation.tsx  footer.tsx  header.tsx  mobile-menu.tsx  theme-toggle.tsx
frontend/components/utils/: dropdown.tsx
src/: data.py  feature_pipeline.py  hyperparam_config.py  logger.py  ml_inference.py  nn_inference.py  nn_train.py  paths.py  predict.py  preprocessing.py  server.py  train.py
